Added small bugfix which shows the metadata correctly now

--- a/web/Search.html
+++ b/web/Search.html
@@ -315,7 +315,7 @@ function ShowSelectedValues(obj)
 			if(!json.books[i].hasocr || (json.books[i].hasocr == undefined))
 			{
 
-				inner = "<div class='some_grid_class'><a href='/ShowMetadata";
+				inner = "<div class='some_grid_class'><a href='/ShowMetadata.html";
 			}
 			else
 			{
