Small design fix with overflowing window

--- a/web/Search.html
+++ b/web/Search.html
@@ -33,9 +33,9 @@ mark {
 .button_box_top {
 	text-align: center;
 	width: 100%;
+	margin: auto;
 	margin-top: 10%;
 	padding-top: 20px;
-	margin-left: 0;
 	padding-bottom: 4rem;
 	background: white;
 	overflow: visible;
@@ -667,6 +667,5 @@ function ShowLinks()
 				<!--</div>-->
 			<div id="ResultBanner"></div>
 			<div id="SearchHitList" start="0" class="list-type2"></div>
-			<div id="LinkList" class="divlisttype"></div>
 		</div>
 	</body>
