Trying to fix small design issue

--- a/web/Search.html
+++ b/web/Search.html
@@ -23,6 +23,12 @@ mark {
 	margin-right: 11%;
 }
 
+.linkcontainer {
+    margin: auto;
+    width: 80%;
+    padding-bottom: 1.5rem;
+}
+
 .some_grid_class {
 	display: grid;
 	margin-top: 3rem;
@@ -337,7 +343,7 @@ function ShowSelectedValues(obj)
 			obj.appendChild(newList);
 	}
 	
-    let val = "<hr>";
+    let val = "<hr><div class='linkcontainer'>";
     let counter = 1;
     for(let i = 0; i < json.max_results; i+=10)
     {
@@ -350,6 +356,7 @@ function ShowSelectedValues(obj)
 	    val+="<a style='margin-right: 1rem;' href='"+lnk+"'>"+counter+"</a>";
 	counter++;
     }
+    val+="</div>";
     obj.innerHTML+=val;
 }
 
