--- a/web/guest_index.html
+++ b/web/guest_index.html
@@ -37,8 +37,7 @@ window.addEventListener("load",function(){User.initialise("homelink");},false);
 <body>
  <div id='tpnav' class="topnav"></div>
  <div class="GeneralPageLayout">
-     <p>Die Cultural and Literary Animal Studies (CLAS) widmen sich unter einer kultur-, literatur- und wissensgeschichtlichen Perspektive dem Fragefeld der Tiere. 
-clas digital bietet eine Forschungsbibliographie zu den Cultural and Literary Animal Studies sowie Volltexte aus der Geschichte des Tierwissens, mit Konzentration auf die Naturkunde/Zoologie zwischen 1750 und 1850. 
+     <p>Die Texte aus der Geschichte des Tierwissens werden im Zusammenhang mit dem Projekt „Büchners Tiere“ (<a href="https://www.uni-frankfurt.de/69369128/FB_10___NDL___Lehrende___Prof__Dr__Roland_Borgards">Roland Borgards</a>) erschlossen; daraus erklärt sich die Beschränkung auf den Zeitraum zwischen 1750 und 1850 und die Konzentration auf deutschsprachige Texte. Das hier zugänglich gemachte Korpus kann für benachbarte Fragen (Schillers Tiere, Tiecks Tiere, die Tiere der Romantik, literarische Tiere im frühen 19. Jahrhundert, Tiere in Goethes Faust, usw.) ohne Einschränkung benutzt werden. Eine Erweiterung des Korpus ist geplant, zunächst bis 1900, dann bis 1950, dann um frühneuzeitliche, mittelalterliche und antike zoologische Texte.
      </p>
      <p>
 Die Forschungsbibliographie erschließt die geistes- und kulturwissenschaftliche Tierforschung in ihrer disziplinären Vielfalt, gleichwohl ist sie weder vollständig noch ausgewogen; vielmehr trägt sie deutlich die Spuren ihres Entstehungskontextes, d.h. der Neueren Deutschen Literaturgeschichte.  
