Fixed issue with not having the right url for links due to the change of path from the index.de.html

--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -8,7 +8,7 @@
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Home - clas digital</title>
 
-    <script src='user.js'></script>
+    <script src='/user.js'></script>
 <style>
 body {
     background: linear-gradient(rgba(255,255,255,.8), rgba(255,255,255,.8)), url("/clasdigital.png");;
@@ -29,7 +29,7 @@ body {
 }
 
 </style>
-<link href="topnav.css" rel="stylesheet" type="text/css">
+<link href="/topnav.css" rel="stylesheet" type="text/css">
 <script>
 window.addEventListener("load",function(){User.initialise("homelink");},false);
 </script>
