Improved the layout of the email address a bit and fixed the missing create bibliography

--- a/web/Search.html
+++ b/web/Search.html
@@ -137,7 +137,7 @@ mark {
 }
 
 .close:hover,
-.close:focus {
+https://github.com/ShadowItaly/clas-digital/issues/56.close:focus {
 	color: black;
 	text-decoration: none;
 	cursor: pointer;
@@ -471,7 +471,7 @@ function CreateBibliography()
 		alert("No books selected!");
 		return;
 	}
-	window.open("/createBibliography?books="+biblst);
+	window.open("/createbibliography?books="+biblst);
 }
 
 
