--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -41,7 +41,7 @@ window.addEventListener("load",function(){User.initialise("homelink");},false);
      </p>
      <p>
 Die Forschungsbibliographie erschließt die geistes- und kulturwissenschaftliche Tierforschung in ihrer disziplinären Vielfalt, gleichwohl ist sie weder vollständig noch ausgewogen; vielmehr trägt sie deutlich die Spuren ihres Entstehungskontextes, d.h. der Neueren Deutschen Literaturgeschichte.  
-Die Forschungsbibliographie wird ständig erweitert. Hinweise nehmen wir sehr gerne auf, bitte per Mail an <a href='mailto:roland.borgards@lingua.uni-frankfurt.de'>Roland Borgards</a>.
+Die Forschungsbibliographie wird ständig erweitert. Hinweise nehmen wir sehr gerne auf, bitte per Mail an <a href='mailto:roland.borgards@lingua.uni-frankfurt.de'>roland.borgards@lingua.uni-frankfurt.de</a>.
      </p>
  </div>
 </body>
