Tweak CLAS capitalisation in information/*de* Follow fix to #57

--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -39,8 +39,10 @@ window.addEventListener("load",function(){User.initialise("homelink");},false);
  <div id='tpnav' class="topnav"></div>
 
  <div class="GeneralPageLayout">
+     <p>
    Die <span lang="en">Cultural and Literary Animal Studies</span> (<abbr lang="en" title="Cultural and Literary Animal Studies">CLAS</abbr>) widmen sich unter einer kultur-, literatur- und wissensgeschichtlichen Perspektive dem Fragefeld der Tiere.
-clas digital bietet eine Forschungsbibliographie zu den Cultural and Literary Animal Studies sowie Volltexte aus der Geschichte des Tierwissens, mit Konzentration auf die Naturkunde/Zoologie zwischen 1750 und 1850.
+<abbr lang="en" title="Cultural and Literary Animal Studies">CLAS</abbr> digital bietet eine Forschungsbibliographie zu den <span lang="en">Cultural and Literary Animal Studies</span> sowie Volltexte aus der Geschichte des Tierwissens, mit Konzentration auf die Naturkunde/Zoologie zwischen 1750 und 1850.
+     </p>
 
      <p>
 Die Forschungsbibliographie erschließt die geistes- und kulturwissenschaftliche Tierforschung in ihrer disziplinären Vielfalt, gleichwohl ist sie weder vollständig noch ausgewogen; vielmehr trägt sie deutlich die Spuren ihres Entstehungskontextes, d.h. der Neueren Deutschen Literaturgeschichte.  
