--- a/web/Search.html
+++ b/web/Search.html
@@ -40,7 +40,7 @@ mark {
 	text-align: center;
 	width: 100%;
 	margin: auto;
-	margin-top: 10%;
+	margin-top: 2%;
 	padding-top: 20px;
 	padding-bottom: 4rem;
 	background: white;
@@ -87,6 +87,16 @@ mark {
 
 .btclass2:hover {
 	border-bottom: 3px solid green;
+}
+
+.betaversion {
+    font-size: small;
+    margin-bottom: 1rem;
+}
+
+.logo {
+    margin-top: 0;
+    margin-bottom: 3rem;
 }
 
 .slider { 
@@ -627,8 +637,7 @@ function ShowLinks()
 	</script>
 	</head>
 	<body style='width: 100%; height: 100%;' onload="ExecuteInitialise()">
-		<!-- The navigation bar config -->
-		<div id='tpnav' class="topnav"></div>
+		<!-- The navigation bar config --> <div id='tpnav' class="topnav"></div>
 
 		<div id="StateBanner"></div><div id="ModalBanner" class="modal">
 			<div class="modal-content">
@@ -666,7 +675,10 @@ function ShowLinks()
 			</div>
 		</div>
 
+
 		<div id="searchboxid" class="button_box_top">
+        <div class="logo"> <img src="wuerzburgsummerschool.png" width="15%" height="12%"> </div>
+        <div class="betaversion"> This is a Beta version. Report Bugs at <a href="https://github.com/ShadowItaly/clas-digital/issues">clas-digital/issues</a> </div> 
 				<!--<div class="form-wrapper-2 cf"> -->
 					<input id="SpecialSID" style='padding: 0.3rem;width: 20%;border-radius: 25px;' type="text" placeholder="Search here..." required>
 					<button id="srchButton" class="srchBtrn" style='display:none;' type="button" onclick="sendToPage('SpecialSID')">Search</button></input>
@@ -674,5 +686,4 @@ function ShowLinks()
 				<!--</div>-->
 			<div id="ResultBanner"></div>
 			<div id="SearchHitList" start="0" class="list-type2"></div>
-		</div>
-	</body>
+		</div> </body>
