Fixed a stupid bug where the new url isnt written to the links

--- a/web/Search.html
+++ b/web/Search.html
@@ -367,7 +367,7 @@ function ShowSelectedValues(obj)
 	if(json.page==counter)
 	    val+="<a style='margin-right: 1rem;' disabled>"+counter+"</a>";
 	  else
-	    val+="<a style='margin-right: 1rem;' href='"+lnk+"'>"+counter+"</a>";
+	    val+="<a style='margin-right: 1rem;' href='"+newlnk+"'>"+counter+"</a>";
 	counter++;
     }
     val+="</div>";
