--- a/web/Search.html
+++ b/web/Search.html
@@ -310,6 +310,10 @@ function OpenFilter()
 	}
 }
 
+function callMetadata(x)
+{
+    window.location = "/ShowMetadata.html?scanId="+x.dataset.scanid;
+}
 
 function ShowSelectedValues(obj)
 {
@@ -345,7 +349,7 @@ function ShowSelectedValues(obj)
 			inner+="' style='display: inline-grid;grid-column-start:1;grid-column-end:2;'><h4 style='text-align: left;float:left;'>";
 			
 			inner+=json.books[i].description+"</h4></a>   "+"<input onclick='this.was_clicked=1;return true;' class='booklistinp' style='width:1rem;height:1rem;display: inline-grid;grid-column-start:2;grid-column-end:3' data-scanid='"+json.books[i].scanId+"' type='checkbox' unchecked></div>";
-			inner+="<div style='text-align: left;color: green;font-size: small;margin-top: -0.5rem;'>";
+			inner+="<div onclick='callMetadata(this);' data-scanid='"+json.books[i].scanId+"' style='text-align: left;color: green;font-size: small;margin-top: -0.5rem; cursor: pointer;'>";
 			inner+=json.books[i].bibliography;
 			inner+="</div><p style='text-align: left;' id='";
 			inner+=json.books[i].scanId;
