--- a/web/Search.html
+++ b/web/Search.html
@@ -337,7 +337,7 @@ function ShowSelectedValues(obj)
 			if(!json.books[i].hasocr || (json.books[i].hasocr == undefined))
 			{
 
-				inner = "<div class='some_grid_class'><a href='/ShowMetadata.html";
+				inner = "<div class='some_grid_class'><a";
 			}
 			else
 			{
