Solving problem with overflow of pages with next search results #76

--- a/web/Search.html
+++ b/web/Search.html
@@ -27,6 +27,13 @@ mark {
     margin: auto;
     width: 80%;
     padding-bottom: 1.5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.linkcontainer:hover{
+    word-wrap: break-word;
+    overflow: visible;
 }
 
 .some_grid_class {
